feat: add post version 1.0 for software

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@/solid/*": ["src/components/solidjs/*"],
+      "@/solid/*": ["src/components/solidjs/*"]
     },
     "jsx": "preserve",
     "jsxImportSource": "solid-js"
